# EstudosLLM

./: README.md  pdf_chat.py
AgentOPs/: README.md  agentOPs_cidade.py
AgentcRAG_simples/: Dockerfile  README.md  agentic_RAG.py  main.py
AgentcRAG_simples/LLM/: formata_contexto.py  gera_resposta.py  prompt.py  recupera_documentos.py  workflow.py
AgentcRAG_simples/agent/: agent_state.py
Analise-curriculos-SLM/: README.md  main.py  pyproject.toml
Analise-curriculos-SLM/src/views/: home.py  resume_extract.py
ChatPDF/: pdf_chat.py  readme.md  requirements.txt
Finetunning_SLM/: README.md  dataset.json  finetunning_SLM.ipynb
Finetunning_SLM_2/: README.md  fine_tunning.ipynb
GenAI-XRay-Analysis/: README.md  app.py  requirements.txt
GraphRAG/: README.md  app_streamlit_graphrag.py  graphrag.py  requirements.txt
GraphRAG_simples/: README.md  classic_rag.py  graph_definition.py  graph_nodes.py  llm_model.py  main.py  pyproject.toml  state_agent.py
LLM_Routing/: README.md  main.py  pyproject.toml
NatLang2SQL - CRM/: README.md  create_db.py  crm_database.db  main.py  pyproject.toml
PatientCareSystem/: README.md  app.py
RAG_Agentico/: rag_agentic.py  readme.md
RAG_BD/: README.md  requirements.txt  stream_rag.py
RAG_Multimodal/: README.md  analyzer.py  app.py  pyproject.toml
RAG_Multimodal/static/: style.css
RAG_Multimodal/templates/: index.html
RAG_simples/: README.md  main.py  pyproject.toml
RAG_simples/src/rag/: rag_system.py
RAG_simples_2/: .env  README.md  app.py  pyproject.toml
RAG_simples_2/agentes/: agent.py
RAG_simples_2/templates/: index.html
RAG_simples_2/utilitarios/: RAG.py
RAG_simples_3/: .gitignore  LICENSE  README.md  main.py  pyproject.toml
RAG_simples_3/dados/: email_01.txt  email_02.txt  email_03.txt  politica_despesas.txt
Router_LLM/Juridic_Router_LMM/: README.md  juridico_router.py
Streamlit_Youtube_Video/: README.md  requirements.txt  stream_video_summarizer.py  youtube_video_summarizer.py
automacao-juridica-NatLang2BD/: README.md  main.py  question_sql.py
automacao-juridica-NatLang2BD/database/: dados.py  data_base.py  db.py
automacao-juridica-NatLang2BD/flows/: workflow.py
automacao-juridica-NatLang2BD/models/: agent_state.py
automacao-juridica-NatLang2BD/service/: llm_services.py
multi_agents/: LICENSE  README.md  app.py  banco_db.py  ferramentas.py  guardrails.py  pyproject.toml  soc_ia.db
planner_city/: README.md  main.py
planner_city/core/: llm_client.py  messages.py  planner_state.py  state_graph.py
planner_city/modules/: create_itinerary.py  input_city.py  input_interests.py
pydantic-contract-analyzer/: .gitignore  README.md  pyproject.toml  requiremennts.txt  streamlit_app.py
pydantic-contract-analyzer/app/agents/: contract_agent.py
pydantic-contract-analyzer/app/models/: contract_models.py
pydantic-contract-analyzer/app/tools/: vector_search.py
pydanticai-estudos/: README.md  agente_IA_Receitas.py  agente_IA_Recomendacao_Filmes.py  agente_IA_financeiro.py  agente_IA_livros.py  agente_IA_tickets.py
