[project]
name = "cap11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt==0.8",
    "faiss-cpu>=1.11.0.post1",
    "langchain==0.3.20",
    "langchain-community==0.3.19",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.28",
    "pypdf2>=3.0.1",
    "streamlit==1.44.0",
]
