[project]
name = "rag-simples-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "groq==0.31.0",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-huggingface==0.3.1",
    "langchain-text-splitters==0.3.11",
    "langgraph>=1.0.1",
    "python-dotenv==1.1.1",
    "sentence-transformers>=5.2.0",
    "streamlit==1.50.0",
    "unstructured>=0.18.27",
]
